# rust-pentagram

./: Cargo.toml  calc.sh  index.html
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs  main.rs  shader.wgsl  state.rs  uniform.rs  vertex.rs
workspace/: Cargo.toml  index.html
workspace/src/: browser_shader.wgsl  instance.rs  lib.rs  shader.wgsl  state.rs  uniform.rs
