[package]
name = "rust-pentagram"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
chrono = "0.4.39"
console_log = "1.0.0"
env_logger = "0.11.6"
fern = "0.7.1"
log = "0.4.22"
pollster = "0.4.0"
quanta = "0.12.5"
rand = { version = "0.8.5", features = ["small_rng"] }
wasm-bindgen = "0.2.99"
web-sys = "0.3.76"
wgpu = { version = "23.0.1", features = ["wgsl", "webgl"] }
winit = { version = "0.29.15", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
wasm-logger = "0.2.0"
wasm-timer = "0.2.5"
web-sys = "0.3.76"
web-time = "1.1.0"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-pentagram-lib"
path = "src/lib.rs"

[package.metadata.cargo-machete]
ignored = ["prost"]
